deploy/k8s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: flixtube
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers: 
      - name: gateway
        image: crazydanila/gateway:af367a45b984e730bda2fa215f5330f9182e6c30
        imagePullPolicy: IfNotPresent
        ports:
        - name: gateway-port
          containerPort: 4000
        resources:
          limits:
            cpu: "1.0"
            memory: "512Mi"
          requests:
            cpu: "0.5"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /api/live
            port: 4000
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  namespace: flixtube
  name: gateway
spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
