deploy/k8s/history-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: flixtube
  name: history
spec:
  replicas: 1
  selector:
    matchLabels:
      app: history
  template:
    metadata:
      labels:
        app: history
    spec:
      containers: 
      - name: history
        image: crazydanila/history:df54efa99990154a7956c317554fdd74fffcaba1
        imagePullPolicy: IfNotPresent
        ports:
        - name: history-port
          containerPort: 4002
        readinessProbe:
          httpGet:
            path: /api/live
            port: 4002
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  namespace: flixtube
  name: history
spec:
  selector:
    app: history
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4002
