deploy/k8s/metadata-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: flixtube
  name: metadata
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metadata
  template:
    metadata:
      labels:
        app: metadata
    spec:
      containers: 
      - name: metadata
        image: crazydanila/metadata:af367a45b984e730bda2fa215f5330f9182e6c30
        imagePullPolicy: IfNotPresent
        ports:
        - name: metadata-port
          containerPort: 4004
        resources:
          limits:
            cpu: "1.0"
            memory: "512Mi"
          requests:
            cpu: "0.5"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /api/live
            port: 4004
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  namespace: flixtube
  name: metadata
spec:
  selector:
    app: metadata
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4004
