deploy/k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: flixtube
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers: 
      - name: db
        image: mongo:7.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: mongodb-port
          containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  namespace: flixtube
  name: db
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
