deploy/k8s/recommendations-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: flixtube
  name: recommendations
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendations
  template:
    metadata:
      labels:
        app: recommendations
    spec:
      containers: 
      - name: recommendations
        image: crazydanila/recommendations:a783ed6f84d79caee8e5782b9e9f06e6b7e22853
        imagePullPolicy: IfNotPresent
        readinessProbe:
          httpGet:
            path: /api/live
            port: 4003
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  namespace: flixtube
  name: recommendations
spec:
  selector:
    app: recommendations
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4003
