deploy/k8s/video-streaming-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: flixtube
  name: video-streaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-streaming
  template:
    metadata:
      labels:
        app: video-streaming
    spec:
      containers: 
      - name: video-streaming
        image: crazydanila/video-streaming:a783ed6f84d79caee8e5782b9e9f06e6b7e22853
        imagePullPolicy: IfNotPresent
        ports:
        - name: streaming-port
          containerPort: 4006
        readinessProbe:
          httpGet:
            path: /api/live
            port: 4006
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  namespace: flixtube
  name: video-streaming
spec:
  selector:
    app: video-streaming
  ports:
    - protocol: TCP
      port: 80
      targetPort: streaming-port
