deploy/k8s/video-uploader-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: flixtube
  name: video-uploader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-uploader
  template:
    metadata:
      labels:
        app: video-uploader
    spec:
      containers: 
      - name: video-uploader
        image: crazydanila/video-uploader:5686ea3c005ab3d058e8994e03efdfad3c4fbbe9
        imagePullPolicy: IfNotPresent
        ports:
        - name: uploader-port
          containerPort: 4005
        resources:
          limits:
            cpu: "1.0"
            memory: "512Mi"
          requests:
            cpu: "0.5"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /api/live
            port: 4005
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  namespace: flixtube
  name: video-uploader
spec:
  selector:
    app: video-uploader
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4005
