deploy/k8s/videos-storage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: flixtube
  name: videos-storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: videos-storage
  template:
    metadata:
      labels:
        app: videos-storage
    spec:
      containers: 
      - name: videos-storage
        image: crazydanila/videos-storage:1
        imagePullPolicy: IfNotPresent
        ports:
        - name: storage-port
          containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  namespace: flixtube
  name: videos-storage
spec:
  selector:
    app: videos-storage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4001
