deploy/k8s/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: flixtube
  name: video-streaming
  labels:
    name: video-streaming
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: video-streaming
                port:
                  number: 80
